--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <script>
-        const socket = io('https://2z1jbtx7-3000.use2.devtunnels.ms/');
+        const socket = io('https://chatapp-production-0a22.up.railway.app/');
         let userName = '';
 
         function joinChat() {
